<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">Notes</string>
    <string name="no_notes">No note.</string>
    <string name="menu_insert">Add New Note</string>
    <string name="menu_delete">Delete Note</string>
    <string name="title">Title</string>
    <string name="body">Content</string>
    <string name="confirm">Save</string>
    <string name="edit_note">Edit Note</string>
    <string name="new_note">New Note</string>

    <string name="priority">Priority</string>
    <string name="mediumPriority">Important</string>
    <string name="lowPriority">Normal</string>
    <string name="highPriority">Urgent</string>
    <string name="alarm">Alarm</string>
    <string name="alarmSwitch">Set Alarm</string>
    <string name="alarmTime">Set Time</string>

    <!-- Switch button -->
    <string name="setButton">SET</string>
    <string name="cancelButton">CANCEL</string>

    <!-- Toast Notifications -->
    <string name="alarmInThePastMSG">The alarm cannot be set:\nit is now or in the past.</string>
    <string name="alarmSetMSG">Alarm set at:\n</string>
    <string name="alarmCancelledMSG">Alarm cancelled.</string>
    <string name="alarmDismissedMSG">Alarm dismissed.</string>

    <!-- Dismiss alarm pop-up -->
    <string name="dismissAlarmMSG">Time is over:\n alarm will be dismissed.</string>
    <string name="OK">OK</string>

    <!-- Top notification -->
    <string name="noteReminderMSG">Note Reminder</string>
    <string name="noteReminderMessageMSG">A note requires you attention!</string>


    <!-- Hints -->
    <string name="titleHint">Title here</string>
    <string name="contentHint">Content here</string>

    <string name="emptyString">*empty*</string>
    <string name="emptyList">You haven\'t added any note yet.</string>


</resources>
