<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainWrapper"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:background="#ffffa000">

    // Title + Content

    <LinearLayout android:id="@+id/titleAndContentWrapper"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#5affa000"
        android:clickable="true">


        // Note Title
        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clickable="true">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:maxLines="1"/>
            <EditText android:id="@+id/titleEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:layout_gravity="top"
                android:maxLength="30" />
        </LinearLayout>

        // Note Content
        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/body" />

            <EditText android:id="@+id/contentEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scrollbars="vertical"
                android:layout_gravity="top"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:singleLine="false" />
        </LinearLayout>

    </LinearLayout>


    // Note Priority
    <LinearLayout android:id="@+id/priorityWrapper"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#5affa000"
        android:padding="10dp">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority" />

        <RadioGroup android:id="@+id/priorityRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highPriority"
                android:id="@+id/highRadioButton"
                android:layout_gravity="center_horizontal"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mediumPriority"
                android:id="@+id/mediumRadioButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lowPriority"
                android:id="@+id/lowRadioButton" />
        </RadioGroup>

    </LinearLayout>


    // Note Alarm
    <LinearLayout android:id="@+id/alarmWrapper"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#5affa000"
        android:padding="10dp">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm" />

        // Alarm switch
        <Switch
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:text="@string/alarmSwitch"
            android:id="@+id/alarmSwitch"
            android:checked="false"
            android:textColor="#000000" />

        // Alarm time
        <RelativeLayout android:id="@+id/alarmTimeWrapper"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <TextView android:id="@+id/alarmTimeString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarmTime"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:textColor="#000000"
                style="@android:style/TextAppearance.Holo" />

            <TextView android:id="@+id/alarmTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@android:style/TextAppearance.Holo"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/alarmTimeString"
                android:layout_marginLeft="43dp" />

        </RelativeLayout>

    </LinearLayout>


    <Button android:id="@+id/confirm"
        android:text="@string/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF" />

</LinearLayout>